--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,16 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  #root {
+  width: 100%;
+  min-height: 100%;
+  flex: 1 1 auto;
+  margin: 0;
+  padding: 2rem;
+  text-align: center;
+}
+
 }
 
 a {
@@ -22,13 +32,19 @@ a:hover {
   color: #535bf2;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  align-items: stretch;   /* let children fill width */
   min-width: 320px;
   min-height: 100vh;
 }
+
 
 h1 {
   font-size: 3.2em;
